# 2bykilt

./: .coveragerc  .env.example  .env.minimal.example  .env.test  .gitignore  .gitleaks.toml  .pylintrc  CHANGELOG.md  CLEANUP_REPORT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  FIX_SUMMARY.md  IMPLEMENTATION_REPORT_255.md  ISSUE_43_COMPLETION_SUMMARY.md  ISSUE_62_COMPLETION_REPORT.md  LICENSE  LLM_AS_OPTION.prompt.md  MAC_COMPATIBILITY_REPORT.md  MINIMAL_EDITION_STARTUP_VERIFICATION.md  PR_125_REVIEW_ANALYSIS.md  PR_DESCRIPTION_ISSUE_62.md  PR_READY_REPORT.md  PR_SUMMARY.md  PR_SUMMARY_ISSUE_62a.md  PR_UPDATE_COMMENT.md  README-MINIMAL.md  README.md  TEST_RELOCATION_REPORT.md  TEST_RESULTS.md  UPDATE_PR_335.md  __main__.memory_intensive_function.memory_usage.csv  __main__.sample_function.execution_time.csv  additiona_comment.md  batch_created.csv  batch_size.csv  bykilt.py  bykilt.py.before_agent_extract  bykilt_simplified.py  chrome_auth_analyzer.py  cpu_usage.csv  (+64 more)
.github/: ISSUE_255_SELF_REVIEW.md  ISSUE_255_UPDATED_BODY.md  PR_BODY_255.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  release.yml
artifacts/: manifest.json
config/: base.yml  feature_flags.yaml
constraints/: README.md  requirements.txt
doc/: continuous-security.md
docs/: ARTIFACTS_UI_IMPLEMENTATION.md  BRANCH_PROTECTION_SETUP.md  CDP_MVP_IMPLEMENTATION_SUMMARY.md  CDP_TEST_PROCEDURE.md  DOCS_INDEX.md  ENHANCED_SECURITY_USER_GUIDE.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  FEATURE_FLAG_MENU_CONTROL_IMPLEMENTATION.md  FEATURE_FLAG_MENU_IMPLEMENTATION_SUMMARY.md  MAC_COMPATIBILITY_REPORT.md  (+21 more)
(+609 files in other folders)
