[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2bykilt"
version = "0.0.1"
description = "2bykilt experimental multi-environment config tooling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
bykilt-config = "src.config.config_cli:main"
kilt-config = "src.config.config_cli:main"  # alias (optional)

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
exclude = ["tests*", "docs*", "tmp*", "scripts*"]